--- a/index.html
+++ b/index.html
@@ -148,11 +148,13 @@
                   <img src="/images/landing1.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
@@ -204,11 +206,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Your All In one Accounting <br />Solution with My T</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting has been<br /> the industrys standard
-          dummy
-          text
-          ever since</p>
+        <h2>Your All In one Accounting <br />Solution with MYT</h2>
+        <p>Elevate Your Accounting Practice with MyT: AI-Powered Efficiency Tailored for Modern Accountants.</p>
       </div>
 
       <div class="container">
@@ -219,10 +218,10 @@
                 <div class="item-child-child">
                   <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
                   <div class="item-text">
-                    <p>Lorem Ipsum is simply dummy</p>
-                    <div class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
-                      industry.
-                      Lorem Ipsum has</div>
+                    <p>Invoice AI analytics</p>
+                    <div class="paragraph">Automatically collect and store expense information by simply taking a
+                      picture of invoices and receipts with Artificial Intelligence Expense Capture.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -238,10 +237,10 @@
                 <div class="item-child-child">
                   <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
                   <div class="item-text">
-                    <p>Lorem Ipsum is simply dummy</p>
-                    <div class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
-                      industry.
-                      Lorem Ipsum has</div>
+                    <p>Open banking </p>
+                    <div class="paragraph">Connect your bank account and automatically get your income and expenses into
+                      one place with Bank Account Integration.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -257,10 +256,9 @@
                 <div class="item-child-child">
                   <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
                   <div class="item-text">
-                    <p>Lorem Ipsum is simply dummy</p>
-                    <div class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
-                      industry.
-                      Lorem Ipsum has</div>
+                    <p>Easy Reports</p>
+                    <div class="paragraph">Access and analyse your self-assessment, balance sheet, income, and expenses
+                      through Easy Reports. </div>
                   </div>
                 </div>
               </div>
@@ -276,10 +274,10 @@
                 <div class="item-child-child">
                   <div class="boximage"><img src="assets/img/Frame 1000002210.jpg" alt=""></div>
                   <div class="item-text">
-                    <p>Lorem Ipsum is simply dummy</p>
-                    <div class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting
-                      industry.
-                      Lorem Ipsum has</div>
+                    <p>Secure Cloud Storage</p>
+                    <div class="paragraph">Access all your business finance data securely and quickly from anywhere
+                      through your Secure Cloud Storage.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -301,7 +299,7 @@
         <div class="container black-section" data-aos="fade-up" data-aos-delay="100"
           style="margin-right: auto; margin-left: auto;">
           <div class="black-textarea">
-            <div class="firstline">Why my T</div>
+            <div class="firstline">Why MYT</div>
             <div class="secondline">One and only for you <img src="assets/img/64b11864635cb0e2d0e23473_new-svg-13 1.png"
                 alt=""></div>
             <div class="linethree text-center">YOUR ALL-IN-ONE ACCOUNTING SOLUTION</div>
@@ -311,9 +309,9 @@
             <div class="col">
               <div class="card custom-card" data-aos="fade-up" data-aos-delay="250">
                 <div class="card-body">
-                  <h5 class="card-title">One and only for you </h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
-                    the industrys standard dummy text ever since</p>
+                  <h5 class="card-title">Streamlined Financial Overview </h5>
+                  <p class="card-text">Get A Detailed, Real-Time View Of Your Company's Finances From One Place. Save
+                    Hours Of Self Assessment Document Preparation By Automating Your Expenses.</p>
                   <img src="assets/img/feature/64ddbc5989aeb93f160948ac_bti-img 1.svg" alt="" />
                 </div>
               </div>
@@ -322,7 +320,8 @@
               <div class="card custom-card-two" data-aos="fade-up" data-aos-delay="350">
                 <div class="card-body">
                   <h5 class="card-title">Easy integration</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+                  <p class="card-text">Collect, Organise And Store Your Financial Data Easily And Gain More Time To
+                    Devote To Your Business. </p>
                   <img src="assets/img/feature/Clip path group.svg" alt="" />
                 </div>
               </div>
@@ -332,9 +331,9 @@
               <div class="card custom-card-three" data-aos="fade-up" data-aos-delay="450">
                 <div class="card-body">
                   <img src="assets/img/feature/3rd.svg" alt="" />
-                  <h5 class="card-title">One and only for you</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting has been
-                    the industrys standard dummy text ever since</p>
+                  <h5 class="card-title">Expense Management</h5>
+                  <p class="card-text">Easily Store, Organise And Submit Your Expenses From Anywhere,
+                    Anytime.<br /> <br/>Reduce Errors And Improve Accuracy</p>
                   <div class="image-card">
                     <img src="assets/img/feature/4th.svg" alt="" />
                   </div>
@@ -351,7 +350,7 @@
               <div class="card custom-card-five" data-aos="fade-up" data-aos-delay="650">
                 <div class="card-body">
                   <h5 class="card-title">24/7 support</h5>
-                  <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+                  <p class="card-text">24 hours email support<br>Telephoe Support Monday to Friday</p>
                   <img src="assets/img/feature/Clip path group.svg" alt="" />
                 </div>
               </div>
@@ -382,7 +381,7 @@
                 <div>
                   <h4 class="d-none d-lg-block">WHO WOULD BENEFIT FROM USING MYT? </h4>
                   <p>
-                    MyT is a cloud-based app that allows you to manage your accounting and bookkeeping tasks in one
+                    MYT is a cloud-based app that allows you to manage your accounting and bookkeeping tasks in one
                     place. It's designed for small business, sole traders, freelancers and their accountants.
                   </p>
                 </div>
@@ -394,7 +393,7 @@
                   <h4 class="d-none d-lg-block">WHAT ARE THE DEVICES THAT CAN I USE TO ACCESS MYT?
                   </h4>
                   <p>
-                    MyT App is available on any device that can access the internet, including desktop computers,
+                    MYT App is available on any device that can access the internet, including desktop computers,
                     laptops, tablets, and smartphones.
                   </p>
                 </div>
@@ -426,7 +425,7 @@
                   <h4 class="d-none d-lg-block">HOW DO I GET STARTED AS A NEW USER?
                   </h4>
                   <p>
-                    Getting started with MyT is simple — just download the app and sign up for an account. Once you’ve
+                    Getting started with MYT is simple — just download the app and sign up for an account. Once you’ve
                     completed the registration process, you can log in on your preferred device and start using right
                     away.
                   </p>
@@ -505,7 +504,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>3 FLEXIBLE SUBSCRIPTION PLANS TO FIT YOUR NEEDS</h2>
-        <p>Time is money and MyT will save you both! Choose the subscription plan<br /> that works best for you, and
+        <p>Time is money and MYT will save you both! Choose the subscription plan<br /> that works best for you, and
           upgrade
           or downgrade whenever you want<br /> without losing any data.</p>
       </div>
@@ -897,18 +896,23 @@
             <p>Follow us on social media!</p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a data-aos="flip-up" data-aos-delay="100" href=""><i class="bi bi-twitter"></i></a>
-            <a data-aos="flip-up" data-aos-delay="200" href=""><i class="bi bi-facebook"></i></a>
-            <a data-aos="flip-up" data-aos-delay="300" href=""><i class="bi bi-instagram"></i></a>
-            <a data-aos="flip-up" data-aos-delay="400" href=""><i class="bi bi-linkedin"></i></a>
+            <a data-aos="flip-up" data-aos-delay="100" href="https://x.com/app_myt" target="_blank"><i
+                class="bi bi-twitter"></i></a>
+            <a data-aos="flip-up" data-aos-delay="200" href="https://www.facebook.com/appmyt" target="_blank"><i
+                class="bi bi-facebook"></i></a>
+            <a data-aos="flip-up" data-aos-delay="300" href="https://www.instagram.com/appmyt/?hl=en" target="_blank"><i
+                class="bi bi-instagram"></i></a>
+            <a data-aos="flip-up" data-aos-delay="400" href="https://www.linkedin.com/company/getmyt/"
+              target="_blank"><i class="bi bi-linkedin"></i></a>
           </div>
+
         </div>
 
         <div class="col-lg-3 col-md-3 footer-links">
           <h4>Product</h4>
           <ul>
             <li data-aos="flip-up" data-aos-delay="100"><a href="#">Home</a></li>
-            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Features</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a onclick="gotFeaturePort()">Features</a></li>
             <li data-aos="flip-up" data-aos-delay="300"><a onclick="gotoviewPort()">Pricing</a></li>
             <li data-aos="flip-up" data-aos-delay="400"><a href="#">Integrations</a></li>
           </ul>
@@ -918,9 +922,9 @@
           <h4>Compnay</h4>
           <ul>
             <li data-aos="flip-up" data-aos-delay="100"><a href="#">About us</a></li>
-            <li data-aos="flip-up" data-aos-delay="200"><a href="#">FAQ</a></li>
-            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Careers</a></li>
-            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Blogs</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a onclick="gotFaqPort()">FAQ</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a onclick="gotCarrierPort()">Careers</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a onclick="gotBlogPort()">Blogs</a></li>
             <li data-aos="flip-up" data-aos-delay="500"><a href="#">Contact Us</a></li>
             <li data-aos="flip-up" data-aos-delay="600"><a target="_blank" href="privacy.html">Privacy Policy</a></li>
             <li data-aos="flip-up" data-aos-delay="700"><a target="_blank" href="termsandconditions.html">Terms and
@@ -932,18 +936,22 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Contact</h4>
           <ul>
-            <li data-aos="flip-up" data-aos-delay="100"><a href="#">Email</a></li>
-            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Instagram</a></li>
-            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Facebook</a></li>
-            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Twitter / X</a></li>
-            <li data-aos="flip-up" data-aos-delay="500"><a href="#">LinkedIn</a></li>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="mailto:info@getmyt.com">Email</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="https://www.instagram.com/appmyt/?hl=en"
+                target="_blank">Instagram</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a href="https://www.facebook.com/appmyt"
+                target="_blank">Facebook</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="https://x.com/app_myt" target="_blank">Twitter / X</a>
+            </li>
+            <li data-aos="flip-up" data-aos-delay="500"><a href="https://www.linkedin.com/company/getmyt/"
+                target="_blank">LinkedIn</a></li>
           </ul>
         </div>
 
       </div>
     </div>
 
-    <div class=" copyright text-left mt-4" >
+    <div class=" copyright text-left mt-4">
       <div class="container">
 
 
@@ -951,13 +959,13 @@
         <div>
 
 
-          <p>© <span>2024</span> <strong class="px-1 sitename">MyT. </strong><span>All Rights Reserved</span></p>
+          <p>© <span>2024</span> <strong class="px-1 sitename">MYT. </strong><span>All Rights Reserved</span></p>
         </div>
         <div class="credits">
 
 
           Designed by
-          <a class="text-white" href="#">MyT</a>
+          <a class="text-white" href="#">MYT</a>
         </div>
       </div>
     </div>
@@ -977,6 +985,26 @@
     function gotoviewPort() {
       // go to the top of the window
       window.scrollTo(0, 4950);
+    }
+  </script>
+  <script>
+    function gotBlogPort() {
+      window.scrollTo(0, 6350);
+    }
+  </script>
+  <script>
+    function gotFeaturePort() {
+      window.scrollTo(0, 1000);
+    }
+  </script>
+  <script>
+    function gotFaqPort() {
+      window.scrollTo(0, 3730);
+    }
+  </script>
+  <script>
+    function gotCarrierPort() {
+      window.scrollTo(0, 4350);
     }
   </script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
