--- a/privacy.html
+++ b/privacy.html
@@ -353,7 +353,7 @@
 
 
                     Designed by
-                    <a class="text-white" href="#">MyT</a>
+                    <a class="text-white" href="#">MYT</a>
                 </div>
             </div>
         </div>
