--- a/privacy.html
+++ b/privacy.html
@@ -346,7 +346,7 @@
                 <div>
 
 
-                    <p>© <span>2024</span> <strong class="px-1 sitename">MyT. </strong><span>All Rights Reserved</span>
+                    <p>© <span>2024</span> <strong class="px-1 sitename">MYT. </strong><span>All Rights Reserved</span>
                     </p>
                 </div>
                 <div class="credits">
@@ -359,6 +359,13 @@
         </div>
 
     </footer>
+
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
