--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -25,8 +25,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
 
   <style>
@@ -295,7 +295,98 @@
     </li>
   </ol>
 
-  
+  <footer id="footer" class="footer position-relative mt-5">
+
+    <div class="container footer-top">
+      <div class="row gy-4" style="margin-bottom: 80px;">
+        <div class="col-lg-4 col-md-6 footer-about">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <img src="assets/img/download.svg" alt="">
+          </a>
+          <div class="footer-contact pt-3" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom"
+            data-aos-delay="100">
+            <p>Our technical intelligence can put you on the</p>
+            <p>fast track to success. That's the promise from</p>
+            <p>Houston IT developers.</p><br />
+            <p>Follow us on social media!</p>
+          </div>
+          <div class="social-links d-flex mt-4">
+            <a data-aos="flip-up" data-aos-delay="100" href=""><i class="bi bi-twitter"></i></a>
+            <a data-aos="flip-up" data-aos-delay="200" href=""><i class="bi bi-facebook"></i></a>
+            <a data-aos="flip-up" data-aos-delay="300" href=""><i class="bi bi-instagram"></i></a>
+            <a data-aos="flip-up" data-aos-delay="400" href=""><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 footer-links">
+          <h4>Product</h4>
+          <ul>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">Home</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Features</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a onclick="gotoviewPort()">Pricing</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Integrations</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-3 footer-links">
+          <h4>Compnay</h4>
+          <ul>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">About us</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">FAQ</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Careers</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Blogs</a></li>
+            <li data-aos="flip-up" data-aos-delay="500"><a href="#">Contact Us</a></li>
+            <li data-aos="flip-up" data-aos-delay="600"><a target="_blank" href="privacy.html">Privacy
+                Policy</a></li>
+            <li data-aos="flip-up" data-aos-delay="700"><a target="_blank" href="termsandconditions.html">Terms and
+                Conditions</a></li>
+          </ul>
+        </div>
+
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Contact</h4>
+          <ul>
+            <li data-aos="flip-up" data-aos-delay="100"><a href="#">Email</a></li>
+            <li data-aos="flip-up" data-aos-delay="200"><a href="#">Instagram</a></li>
+            <li data-aos="flip-up" data-aos-delay="300"><a href="#">Facebook</a></li>
+            <li data-aos="flip-up" data-aos-delay="400"><a href="#">Twitter / X</a></li>
+            <li data-aos="flip-up" data-aos-delay="500"><a href="#">LinkedIn</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div class=" copyright text-left mt-4">
+      <div class="container">
+
+
+
+        <div>
+
+
+          <p>© <span>2024</span> <strong class="px-1 sitename">MYT. </strong><span>All Rights Reserved</span>
+          </p>
+        </div>
+        <div class="credits">
+
+
+          Designed by
+          <a class="text-white" href="#">MYT</a>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top  d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
