--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
 
+  <style>
+    .trustindex-widget * {
+      color: white !important;
+    }
+  </style>
+
+
 </head>
 
 <body class="index-page">
@@ -116,52 +123,57 @@
               <p>
                 <i class="bi bi-check"></i> Time saver and stress-free.
               </p>
-
-              <!-- <p>
-              get your free month of bookkeeping , valued at $299.
-            </p> -->
               <div class="btns">
                 <a class="getstarted" onclick="gotoviewPort()"><button>START YOUR PLAN!</button></a>
                 <!-- <a href="#" class=" bookdemo"><button>BOOK A DEMO </button> </a> -->
               </div>
+
+              <br>
+              <script defer async src='https://cdn.trustindex.io/loader.js?aa0223b88b1345982e5d056458'
+                data-theme="white"></script>
+
 
             </div>
           </div>
 
 
 
-          <div class="col-lg-6 about-images d-flex align-items-center justify-content-center flex-column"
+
+
+
+          <div class="col-lg-5 about-images d-flex align-items-center justify-content-center flex-column"
             data-aos="fade-up" data-aos-delay="200">
 
             <!-- <div class="col-lg-8">
               <img src="./images/landing1.png" class="img-fluid" alt="">
             </div> -->
-            <div id="carouselHero" class="carousel slide">
+
+
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item active" data-bs-interval="2000">
                   <img src="/images/landing1.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                   <img src="/images/landing1.png" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                   <img src="/images/landing1.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-            <div class="col-lg-6">
 
-            </div>
+
 
           </div>
 
@@ -333,7 +345,7 @@
                   <img src="assets/img/feature/3rd.svg" alt="" />
                   <h5 class="card-title">Expense Management</h5>
                   <p class="card-text">Easily Store, Organise And Submit Your Expenses From Anywhere,
-                    Anytime.<br /> <br/>Reduce Errors And Improve Accuracy</p>
+                    Anytime.<br /> <br />Reduce Errors And Improve Accuracy</p>
                   <div class="image-card">
                     <img src="assets/img/feature/4th.svg" alt="" />
                   </div>
@@ -400,7 +412,7 @@
               </a>
             </li>
           </ul>
-          <div class="col-lg-6 mt-lg-4">
+          <div class="col-lg-6 ">
 
 
             <div class="tab-content d-flex align-items-center justify-content-center" data-aos="fade-up"
@@ -461,40 +473,14 @@
         DON'T JUST TAKE OUR WORD FOR IT.<br />
         GET REAL INSIGHTS FROM REAL CUSTOMERS!
       </div>
-      <div class="d-flex justify-content-center mt-0">
-        <p>Google rating score:4.9 of 5,based on 15 reviews
-        </p>
+     
+
+      <div class="col-lg-10">
+
+        <script defer async src='https://cdn.trustindex.io/loader.js?44d09f188daf33989d5dd09c34'></script>
       </div>
 
 
-
-
-      <div class="row d-flex justify-content-center">
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-2">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
 
     </div>
 
@@ -906,6 +892,20 @@
               target="_blank"><i class="bi bi-linkedin"></i></a>
           </div>
 
+          <div class="contact-details mt-4">
+            <p><i class="bi bi-envelope "></i> <a class="text-white ml-2"
+                href="mailto:info@getmyt.com" target="_blank">info@getmyt.com</a></p>
+            <p><i class="bi bi-phone"></i> <a class="text-white ml-2" href="tel:+44-330-056-8705">+44-330-056-8705</a></p>
+          </div>
+
+          <div class="downloads pt-3 d-flex align-items-center " data-aos="flip-up" data-aos-delay="500">
+            <a class="" href="https://x.com/app_myt" target="_blank"><img
+                src="assets/img/icon/apple.svg" style="max-width: 150px;" class="me-3"  alt="app-store-badge" /></a>
+            <a href="https://x.com/app_myt" target="_blank"><img
+                src="assets/img/icon/google-play.svg" style="max-width: 150px;" alt="google-play-badge" /></a>
+          </div>
+          
+
         </div>
 
         <div class="col-lg-3 col-md-3 footer-links">
@@ -952,18 +952,11 @@
     </div>
 
     <div class=" copyright text-left mt-4">
-      <div class="container">
-
-
-
+      <div class="container d-flex flex-wrap align-items-center justify-content-between">
         <div>
-
-
-          <p>© <span>2024</span> <strong class="px-1 sitename">MYT. </strong><span>All Rights Reserved</span></p>
+          <span>© <span>2024</span> <strong class="px-1 sitename">MYT. </strong><span>All Rights Reserved</span></span>
         </div>
-        <div class="credits">
-
-
+        <div class="credits mt-lg-3 mt-0">
           Designed by
           <a class="text-white" href="#">MYT</a>
         </div>
