--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         DON'T JUST TAKE OUR WORD FOR IT.<br />
         GET REAL INSIGHTS FROM REAL CUSTOMERS!
       </div>
-     
+
 
       <div class="col-lg-10">
 
@@ -894,18 +894,20 @@
           </div>
 
           <div class="contact-details mt-4">
-            <p><i class="bi bi-envelope "></i> <a class="text-white ml-2"
-                href="mailto:info@getmyt.com" target="_blank">info@getmyt.com</a></p>
-            <p><i class="bi bi-phone"></i> <a class="text-white ml-2" href="tel:+44-330-056-8705">+44-330-056-8705</a></p>
+            <p><i class="bi bi-envelope "></i> <a class="text-white ml-2" href="mailto:info@getmyt.com"
+                target="_blank">info@getmyt.com</a></p>
+            <p><i class="bi bi-phone"></i> <a class="text-white ml-2" href="tel:+44-330-056-8705">+44-330-056-8705</a>
+            </p>
           </div>
 
           <div class="downloads pt-3 d-flex align-items-center " data-aos="flip-up" data-aos-delay="500">
-            <a class="" href="https://x.com/app_myt" target="_blank"><img
-                src="assets/img/icon/apple.svg" style="max-width: 150px;" class="me-3"  alt="app-store-badge" /></a>
-            <a href="https://x.com/app_myt" target="_blank"><img
+            <a class="" href="https://apps.apple.com/us/app/my-t-accounting-mtd-software/id1353352478"
+              target="_blank"><img src="assets/img/icon/apple.svg" style="max-width: 150px;" class="me-3"
+                alt="app-store-badge" /></a>
+            <a href="https://play.google.com/store/apps/details?id=com.app.myt&pli=1" target="_blank"><img
                 src="assets/img/icon/google-play.svg" style="max-width: 150px;" alt="google-play-badge" /></a>
           </div>
-          
+
 
         </div>
 
